--- a/res/layout/fragment_messages.xml
+++ b/res/layout/fragment_messages.xml
@@ -1,45 +1,43 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MessagesActivity">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="Fragments.MessagesFragment">
 
     <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="0dp"
-            android:layout_height="0dp" android:id="@+id/hlMessages_ActionBar"
-            app:layout_constraintHeight_percent=".07" app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
-            android:background="@android:color/darker_gray">
+        android:orientation="horizontal"
+        android:layout_width="0dp"
+        android:layout_height="0dp" android:id="@+id/hlMessages_ActionBar"
+        app:layout_constraintHeight_percent=".07" app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
+        android:background="@android:color/darker_gray">
         <TextView
-                android:text="Messages"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" android:id="@+id/tvMessages_Messages" android:layout_weight="1"
-                android:textSize="20sp" android:textColor="@android:color/black" android:gravity="center"
-                android:layout_marginBottom="1dp"
-                android:background="@android:color/background_light"/>
+            android:text="Messages"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" android:id="@+id/tvMessages_Messages" android:layout_weight="1"
+            android:textSize="20sp" android:textColor="@android:color/black" android:gravity="center"
+            android:layout_marginBottom="1dp"
+            android:background="@android:color/background_light"/>
         <ImageButton
-                android:layout_height="match_parent" app:srcCompat="@drawable/ic_pencil"
-                android:id="@+id/tvMessages_Write"
-                android:layout_width="wrap_content"
-                android:background="@android:color/background_light" android:layout_marginBottom="1dp"
-                android:paddingRight="5dp"/>
+            android:layout_height="match_parent" app:srcCompat="@drawable/ic_pencil"
+            android:id="@+id/ibMessages_NewMessage"
+            android:layout_width="wrap_content"
+            android:background="@android:color/background_light" android:layout_marginBottom="1dp"
+            android:paddingRight="5dp"/>
         <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" app:srcCompat="@drawable/ic_trash"
-                android:id="@+id/tvMessages_Delete"
-                android:layout_marginBottom="1dp" android:background="@android:color/background_light"
-                android:paddingRight="2dp"/>
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" app:srcCompat="@drawable/ic_trash"
+            android:id="@+id/ibMessages_Delete"
+            android:layout_marginBottom="1dp" android:background="@android:color/background_light"
+            android:paddingRight="2dp"/>
     </LinearLayout>
 
     <ScrollView
         android:id="@+id/svMessages_Scroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/hlMessages_NavigationBar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hlMessages_ActionBar">
 
         <LinearLayout
@@ -743,45 +741,5 @@
         </LinearLayout>
 
     </ScrollView>
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
-            android:background="@android:color/holo_green_dark" android:id="@+id/hlMessages_NavigationBar"
-            app:layout_constraintHeight_percent=".08" android:layout_height="0dp">
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/ibMessages_Home"
-                android:src="@drawable/ic_home"
-                android:layout_weight="1" android:background="@android:color/black" android:layout_marginTop="2dp"/>
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/ibMessages_Messages"
-                android:src="@drawable/ic_messages"
-                android:background="@android:color/black"
-                android:layout_weight="1" android:layout_marginTop="2dp"/>
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/ibMessages_Explore"
-                android:src="@drawable/ic_explore" android:background="@android:color/black" android:layout_weight="1"
-                android:layout_marginTop="2dp"/>
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/ibMessages_NewPost" android:background="@android:color/black"
-                android:src="@drawable/ic_add"
-                android:layout_weight="1" android:layout_marginTop="2dp"/>
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:id="@+id/ibMessages_Profile"
-                android:src="@drawable/ic_profile"
-                android:background="@android:color/black" tools:layout_editor_absoluteX="80dp"
-                tools:layout_editor_absoluteY="4dp"
-                android:layout_weight="1" android:layout_height="match_parent" android:layout_marginTop="2dp"/>
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
