--- a/res/layout/fragment_chat.xml
+++ b/res/layout/fragment_chat.xml
@@ -39,6 +39,7 @@
         android:id="@+id/svChat_Messages"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toTopOf="@id/clChat_TextMessage"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
