--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -52,7 +52,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/civChatsAd_ProfilePhoto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/guitarist" />
@@ -73,7 +73,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/tvChatsAd_Username"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:background="@android:color/white"
@@ -83,7 +83,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/tvChatsAd_Time"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="1dp"
@@ -102,7 +102,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/civChatsAd_ProfilePhoto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/photographer" />
@@ -123,7 +123,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/tvChatsAd_Username"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:background="@android:color/white"
@@ -133,7 +133,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/tvChatsAd_Time"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="1dp"
@@ -152,7 +152,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/civChatsAd_ProfilePhoto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/artist" />
@@ -173,7 +173,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/tvChatsAd_Username"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:background="@android:color/white"
@@ -183,7 +183,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/tvChatsAd_Time"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="1dp"
@@ -202,7 +202,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/civChatsAd_ProfilePhoto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/videographer" />
@@ -223,7 +223,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/tvChatsAd_Username"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:background="@android:color/white"
@@ -233,7 +233,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/tvChatsAd_Time"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="1dp"
@@ -253,7 +253,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/civChatsAd_ProfilePhoto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/magician" />
@@ -274,7 +274,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/tvChatsAd_Username"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:background="@android:color/white"
@@ -284,7 +284,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/tvChatsAd_Time"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="1dp"
@@ -304,7 +304,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/civChatsAd_ProfilePhoto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/guitarist" />
@@ -325,7 +325,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/tvChatsAd_Username"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:background="@android:color/white"
@@ -335,7 +335,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/tvChatsAd_Time"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="1dp"
@@ -354,7 +354,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/civChatsAd_ProfilePhoto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/photographer" />
@@ -375,7 +375,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/tvChatsAd_Username"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:background="@android:color/white"
@@ -385,7 +385,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/tvChatsAd_Time"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="1dp"
@@ -404,7 +404,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/civChatsAd_ProfilePhoto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/artist" />
@@ -425,7 +425,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/tvChatsAd_Username"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:background="@android:color/white"
@@ -435,7 +435,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/tvChatsAd_Time"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="1dp"
@@ -454,7 +454,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/civChatsAd_ProfilePhoto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/videographer" />
@@ -475,7 +475,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/tvChatsAd_Username"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:background="@android:color/white"
@@ -485,7 +485,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/tvChatsAd_Time"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="1dp"
@@ -505,7 +505,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/civChatsAd_ProfilePhoto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/magician" />
@@ -526,7 +526,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/tvChatsAd_Username"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:background="@android:color/white"
@@ -536,7 +536,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/tvChatsAd_Time"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="1dp"
