--- a/res/layout/adapter_chats.xml
+++ b/res/layout/adapter_chats.xml
@@ -6,23 +6,23 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/civChatsAd_ProfilePhoto"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/friendpic3"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/friendpic1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clChatsAd_Message"
+    <LinearLayout
+        android:id="@+id/vlChatsAd_Text"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="125dp"
-        android:background="@android:color/darker_gray"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="10dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@id/civChatsAd_ProfilePhoto"
         app:layout_constraintLeft_toRightOf="@id/civChatsAd_ProfilePhoto"
@@ -30,13 +30,29 @@
         app:layout_constraintTop_toTopOf="@id/civChatsAd_ProfilePhoto">
 
         <TextView
-            android:id="@+id/tvChatsAd_Message"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvChatsAd_Username"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="2dp"
-            android:text="TextView"
+            android:text="Username"
             android:textColor="@android:color/black"
+            android:textSize="17sp" />
+
+        <TextView
+            android:id="@+id/tvChatsAd_Message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingTop="5dp"
+            android:text="message"
             android:textSize="16sp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/tvChatsAd_Time"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="1dp"
+            android:gravity="bottom|right"
+            android:text="40 min" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
