--- a/res/layout/adapter_posts.xml
+++ b/res/layout/adapter_posts.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -10,6 +11,8 @@
         android:layout_weight="1"
         android:padding="1dp"
         android:scaleType="fitXY"
-        android:src="@drawable/artist" />
+        android:src="@drawable/artist"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
